[gd_scene load_steps=7 format=2]

[ext_resource path="res://Weapon.gd" type="Script" id=1]
[ext_resource path="res://World/potion.png" type="Texture" id=2]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Stats/Stats.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 18.4022

[sub_resource type="CircleShape2D" id=2]

[node name="Weapon" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 4
hframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="AttackRate" type="Timer" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="ChangeColor" type="Timer" parent="."]
one_shot = true

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_mask = 2147483648

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
damage = 2.0
fireRate = 2.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="ChangeColor" to="." method="_on_ChangeColor_timeout"]

[editable path="Hitbox"]
